Added console command line functionaility and additional tests